--- a/pages/projects/lordre.html
+++ b/pages/projects/lordre.html
@@ -88,9 +88,7 @@
                 <a href="https://www.linkedin.com/in/no%C3%A9mie-nu%C3%B1ez-b4698b294/" target="_blank">Noémie
                     Nuñez</a>,
                 l'aide de
-                <a href="https://www.linkedin.com/in/drissdll/" target="_blank">Driss Loudiyi</a>
-                et la participation d'
-                <a href="https://fr.linkedin.com/in/alexis-juhel16" target="_blank">Alexis Juhel</a>.
+                <a href="https://www.linkedin.com/in/drissdll/" target="_blank">Driss Loudiyi</a> et la participation d'<a href="https://fr.linkedin.com/in/alexis-juhel16" target="_blank">Alexis Juhel</a>.
             </p>
         </section>
 
