--- a/pages/projects/publicActif.html
+++ b/pages/projects/publicActif.html
@@ -39,7 +39,7 @@
     <section id="project-page-title">
         <h1><span>(motion) </span>Public Actif</h1>
         <p>
-            En une minute, avec <a href="https://simondaguetkargl.fr/" target="_blank">Simon Daguet--Kargl</a>, nous
+            En une minute, avec <a href="https://simondaguetkargl.fr/" target="_blank">Simon Daguet-Kargl</a>, nous
             avons vulgarisé la théorie du Public Actif de Gabriel Tarde à travers une animation en flat design mise en
             perspective. L’objectif était de rendre nos explications aussi attrayantes sur le fond qu’agréables à
             regarder.
