--- a/pages/projects.html
+++ b/pages/projects.html
@@ -47,9 +47,14 @@
                 <div class="background-image"
                     style="background-image: url('/images/miniatures/minitiature-lordre.webp');background-size: cover;">
                 </div>
-                <div class="text">
-                    <p class="title">L'Ordre</p>
-                    <p class="text">Réalisation d'un court-métrage de guerre, avec comme thème "sous-marin".</p>
+                <div class="project-content">
+                    <div class="text">
+                        <p class="title">L'Ordre</p>
+                        <p class="text">Réalisation d'un court-métrage de guerre, avec comme thème "sous-marin".</p>
+                    </div>
+                    <div class="project-labels">
+                        <span>Vidéo</span>
+                    </div>
                 </div>
             </div>
         </a>
@@ -59,9 +64,14 @@
                 <div class="background-image"
                     style="background-image: url('/images/miniatures/miniature-ebulliton.webp');background-size: cover;">
                 </div>
-                <div class="text">
-                    <p class="title">Ébullition</p>
-                    <p class="text">Réalisation d'un épisode pilote d'une émission culturelle.</p>
+                <div class="project-content">
+                    <div class="text">
+                        <p class="title">Ébullition</p>
+                        <p class="text">Réalisation d'un épisode pilote d'une émission culturelle.</p>
+                    </div>
+                    <div class="project-labels">
+                        <span>Vidéo</span>
+                    </div>
                 </div>
             </div>
         </a>
@@ -72,9 +82,15 @@
                 <div class="background-image"
                     style="background-image: url('/images/miniatures/miniature-altermmi.webp');background-size: cover;">
                 </div>
-                <div class="text">
-                    <p class="title">Alter'MMI</p>
-                    <p class="text">Réalisation d'un motion design pour présenter le métier de développeur back-end.</p>
+                <div class="project-content">
+                    <div class="text">
+                        <p class="title">Alter'MMI</p>
+                        <p class="text">Réalisation d'un motion design pour présenter le métier de développeur back-end.
+                        </p>
+                    </div>
+                    <div class="project-labels">
+                        <span>Motion design</span>
+                    </div>
                 </div>
             </div>
         </a>
@@ -84,9 +100,15 @@
                 <div class="background-image"
                     style="background-image: url('/images/miniatures/miniature-befake.webp');background-size: cover;">
                 </div>
-                <div class="text">
-                    <p class="title">BeFake.</p>
-                    <p class="text">Développement d'un réseau social de partage de photos.</p>
+                <div class="project-content">
+                    <div class="text">
+                        <p class="title">BeFake.</p>
+                        <p class="text">Développement d'un réseau social de partage de photos.</p>
+                    </div>
+                    <div class="project-labels">
+                        <span>Site web</span>
+                        <span>IA</span>
+                    </div>
                 </div>
             </div>
         </a>
@@ -97,12 +119,14 @@
                 <div class="background-image"
                     style="background-image: url('/images/miniatures/miniature-public-actif.webp');background-size: cover;">
                 </div>
-                <div class="text">
-
-                    <p class="title">Public Actif</p>
-
-
-                    <p class="text">Motion design présentant la théorie du Public Actif de Gabriel Tarde.</p>
+                <div class="project-content">
+                    <div class="text">
+                        <p class="title">Public Actif</p>
+                        <p class="text">Motion design présentant la théorie du Public Actif de Gabriel Tarde.</p>
+                    </div>
+                    <div class="project-labels">
+                        <span>Motion design</span>
+                    </div>
                 </div>
             </div>
         </a>
@@ -116,9 +140,15 @@
                 <div class="background-image"
                     style="background-image: url('/images/miniatures/miniature-refonte-musba.webp');background-size: cover;">
                 </div>
-                <div class="text">
-                    <p class="title">Refonte MusBA</p>
-                    <p class="text">Refonte graphique du site du Musée des Beaux Arts de Bordeaux.</p>
+                <div class="project-content">
+
+                    <div class="text">
+                        <p class="title">Refonte MusBA</p>
+                        <p class="text">Refonte graphique du site du Musée des Beaux Arts de Bordeaux.</p>
+                    </div>
+                    <div class="project-labels">
+                        <span>Site web</span>
+                    </div>
                 </div>
             </div>
         </a>
@@ -130,9 +160,14 @@
                 <div class="background-image"
                     style="background-image: url('/images/miniatures/miniature-escapades-temporelles.webp');background-size: cover;">
                 </div>
-                <div class="text">
-                    <p class="title">Escapades Temporelles</p>
-                    <p class="text">Réalisation d’un jeu-vidéo basé sur le voyage dans le temps.</p>
+                <div class="project-content">
+                    <div class="text">
+                        <p class="title">Escapades Temporelles</p>
+                        <p class="text">Réalisation d’un jeu-vidéo basé sur le voyage dans le temps.</p>
+                    </div>
+                    <div class="project-labels">
+                        <span>Jeu vidéo</span>
+                    </div>
                 </div>
             </div>
         </a>
