--- a/index.html
+++ b/index.html
@@ -115,7 +115,8 @@
                 <span class="span-competence">écriture</span>-->
             </a>
 
-            <a href="/pages/projects/publicActif.html" class="card background-image" id="card-theories">
+            <a href="/pages/projects/publicActif.html" class="card background-image" id="card-theories"
+                style="object-fit: cover;">
 
                 <!-- image du projet(url) & lien vers la page(href) 
                 <p class="span-project">(01) <span>Théories animées</span></p>  Titre du projet 
