--- a/pages/projects.html
+++ b/pages/projects.html
@@ -117,7 +117,7 @@
         <a href="/pages/projects/publicActif.html">
             <div class="project">
                 <div class="background-image"
-                    style="background-image: url('/images/miniatures/miniature-public-actif.webp');background-size: cover;">
+                    style="background-image: url('/images/miniatures/miniature-public-actif.webp'); background-size: cover; object-fit: cover;">
                 </div>
                 <div class="project-content">
                     <div class="text">
